--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                              <h2 class="animation-box wow bounceIn animated"><strong class="strong">One touch for</strong><br>
                             all Vegetable Wholesale Rates</h2>
                             <p>
-                                 We Support Farmers by providing Daily Vegetable Rates surrounding to their Native. Till now more than 5k farmers are using our app. 
+                                We support farmers in sharing the rates of the vegetables in the market to reduce the efforts required by them to sell the vegetables at a suitable price
                             </p>
                             <a href="https://play.google.com/store/apps/details?id=agri.marketmeter" class="btn btn-download wow animated fadeInLeft">
                             <i class="fa fa-android pull-left"></i>
