--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 
 
     <!-- <script src="js/modernizr.custom.js"></script> -->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-P6P4314R4H"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-P6P4314R4H');
+        </script>
+
+    
 
 </head>
 
